[package]
name = "regexp"
description = "Regular Expression"
version = "0.2.3"
authors = ["Grigoriy Baranov <baranov@w3m.co>"]
license = "MIT"
repository = "https://github.com/WatchDG/rust-regexp"
edition = "2018"

exclude = [
    ".github",
    ".gitignore",
    "README.md"
]

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.4"